--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
-    - name: Docker login
+    - name: Docker login - Login en DockerHub
       env: 
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
@@ -25,5 +25,14 @@ jobs:
         echo "Iniciando login"
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
         echo "Fin del login"
+    - name: Build Docker Image - Construir Imagen
+      run: |
+        docker build -t tavo1419/docker-graphql:0.0.0.2 .
+    - name: Push Docker Image - Subir la imagen a DockerHub
+      run: |
+        docker push tavo1419/docker-graphql:0.0.0.2 .
+
+
+    
     # - name: Build the Docker image
     #   run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
