--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,22 +17,34 @@ jobs:
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
+        
+    - name: Git Semantic Version
+      uses: PaulHatch/semantic-version@v4.0.3
+      with: 
+        major_pattern: "major:"
+        minor_pattern: "feat:"
+        format: "${major}.${minor}.${patch}-prerelease${increment}"
+      id: version
+      
     - name: Docker login - Login en DockerHub
       env: 
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        NEW_VERSION: ${{ steps.version.outputs.version }}
       run: |
         echo "Iniciando login"
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+        echo "Nueva version: $NEW_VERSION!!!!!!!"
         echo "Fin del login"
-    - name: Build Docker Image - Construir Imagen
-      run: |
-        docker build -t tavo1419/docker-graphql:0.0.0.2 .
-        docker build -t tavo1419/docker-graphql:latest .
-    - name: Push Docker Image - Subir la imagen a DockerHub
-      run: |
-        docker push tavo1419/docker-graphql:0.0.0.2
-        docker push tavo1419/docker-graphql:latest
+        
+    # - name: Build Docker Image - Construir Imagen
+    #   run: |
+    #     docker build -t tavo1419/docker-graphql:0.0.0.2 .
+    #     docker build -t tavo1419/docker-graphql:latest .
+    # - name: Push Docker Image - Subir la imagen a DockerHub
+    #   run: |
+    #     docker push tavo1419/docker-graphql:0.0.0.2
+    #     docker push tavo1419/docker-graphql:latest
 
 
     
